--- a/Runtime/ARS.ProBridgeSensors.asmdef
+++ b/Runtime/ARS.ProBridgeSensors.asmdef
@@ -2,7 +2,9 @@
     "name": "ARS.ProBridgeSensors",
     "rootNamespace": "",
     "references": [
-        "GUID:52e0c9b0743eb4e409ccf123c160c71e"
+        "GUID:52e0c9b0743eb4e409ccf123c160c71e",
+        "GUID:e9a473e6ad03eae4a89800bf81bd1594",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
