--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "com.ars.probridge-sensors",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "displayName": "ProBridgeSensors",
     "description": "ProBridge plugin for sensors implementation",
     "unity": "2018.4",
     "type": "library",
     "dependencies": {
         "com.unity.nuget.newtonsoft-json": "3.0.2",
-        "com.ars.probridge": "3.0.0"
+        "com.ars.probridge": "3.0.0",
+        "com.frj.unity-sensors": "2.0.4"
     },
     "keywords": [
         "ROS",
