--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dependencies": {
         "com.unity.nuget.newtonsoft-json": "3.0.2",
         "com.ars.probridge": "3.0.0",
-        "com.unity.burst" : "1.8.12"
+        "com.unity.burst" : "1.8.12",
+        "com.unity.collections" : "2.5.1"
     },
     "keywords": [
         "ROS",
